# server-metadata

./: .gitignore  README.md  abouts.py  availabilities.py  availability.py  catalogs.py  crontab.txt  pyproject.toml  relations.py  run.json  run.py  samples.py  serve.py  servefs.py  servers.py  setup.py  spase.json  spase.py  table.py
etc/: README.md  crontab.py  crontab.sh  crontab.txt  restart.sh  serve-fs.plist  serve-fs.py  serve-fs.sh  serve-table-localhost.sh  serve-table.plist  serve-table.py  serve-table.sh  servefs.plist  servefs.plist.README  servefs.py  servefs.sh  server.py  update-plist.sh
hapimeta/: __init__.py  all.py  catalogs_all.py  cli.py  config.py  error.py  get.py  logger.py  version.py
hapimeta/generators/: __init__.py  abouts.py  availabilities.py  catalogs.py  relations.py  spase.py  table.py
table/: dict2sql.json  render.js  style.css  tableui.json
