[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hapimeta"
version = "0.0.1"
description = "A package for metadata from HAPI servers."
readme = "README.md"
authors = [
  {name = "Bob Weigel and Jeremy Faden", email = "rweigel@gmu.edu"},
]
dependencies = [
  "hapiplot",
  "hapiclient",
  "datetick",
  "lxml",
  "deepdiff",
  "GitPython",
  "isodate",
  "rdflib",
  "utilrsw[net] @ git+https://github.com/rweigel/utilrsw@main",
  "tableui @ git+https://github.com/rweigel/table-ui@main",
]

[tool.setuptools.packages.find]
include = ["hapimeta*"]